<resources>
    <string name="app_name">Smart-Worker</string>
    <string name="google_maps_API_key">AIzaSyDr8Mm-3qlW4iwmBgITaejjLwysa7YPP1U</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="nicNumber">NIC Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="view_jobs">View Jobs</string>
    <string name="add_job">Add Jobs</string>
    <string name="myProfile">My Profile</string>
    <string name="todo">TODO</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="title">Job Title</string>
    <string name="description">Description</string>
    <string name="submitlocation">Submit Location</string>
    <string name="setlocation">Set Location</string>
    <string name="addjob">Add Job</string>
    <string name="search_here">Search here</string>
    <string name="address_txt">Address</string>
    <string name="category_txt">Category</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_action_logout">Logout</string>
    <string name="view_map">Job Map</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
