<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/name_text"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/profile_image"
        android:text="Username"
        android:textColor="#555555"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="300dp"
        android:layout_height="30dp"

        android:layout_alignStart="@+id/name_text"
        android:layout_below="@+id/name_text"
        android:text="@string/category_txt"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/mobile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/address_text"
        android:layout_alignStart="@+id/name_text"
        android:text="@string/mobileNumber"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/profile_image"
        android:text="@string/address_txt"
        android:textColor="#999999"
        android:textSize="14sp" />
</RelativeLayout>