<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="dreamso.smart_worker.ServiceActivity">


    <Button
        android:id="@+id/btnMap"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_above="@+id/myProfile"
        android:layout_alignStart="@+id/myProfile"
        android:layout_marginBottom="21dp"
        android:background="@drawable/loginbutton_selector"
        android:onClick="loadMap"
        android:padding="3dp"
        android:text="@string/view_jobs"
        android:textColor="#0d7b85"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/myProfile"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_above="@+id/AddJobs"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/myProfile"
        android:textColor="#0d7b85"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/AddJobs"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/myProfile"
        android:layout_marginBottom="41dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/add_job"
        android:textColor="#0d7b85"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/jobviewbtn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/btnMap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/title_logo"
        app:srcCompat="@drawable/mapbtn" />


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <View
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_dropshadow" />
    </android.support.design.widget.AppBarLayout>


</RelativeLayout>
